--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,7 @@
   </div>
 </section>
 <% end %>
+<% resource_cache(resource) do %>
 <section id="about" class="section">
   <div class="container" class="text-center">
     <div class="row">
@@ -60,3 +61,4 @@
    </div>
   </div>
 </section>
+<% end %>
